--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   flutter_bloc: ^7.2.0
+  cloud_firestore: ^2.5.1
+  firebase_core: ^1.6.0
+  firebase_auth: ^3.1.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
