--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.3
   intl: ^0.17.0
   flutter_launcher_icons: ^0.9.2
+  google_sign_in: ^5.1.0
 
 flutter_icons:
   android: "launcher_icon"
